--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,6 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* to run the build  */
+/* npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch */
